# giac

./: .gitignore  .npmrc  CMakeLists.txt  Gemfile  Jenkinsfile  README-BUILD-WITH-MESON.md  README.md  build.gradle  deploy.gradle  giac_tommath_build_script.sh  ios.jenkinsfile  meson.build  meson_options.txt  package-lock.json  package.json  recompile-msys.sh  repositories.gradle
.github/workflows/: build.yml  deploy.xml  deploy.yml
cross/: android-arm.ini  android-arm64.ini  android-x86.ini  android-x86_64.ini  emscripten-wasm32.ini  ios-arm64.ini  ios-sim-arm64.ini  ios-sim-x86_64.ini  linux-arm.ini  maccatalyst-arm64.ini  maccatalyst-x86_64.ini  windows-clang64.ini
giac-android/: build.gradle
giac-android/src/main/: AndroidManifest.xml
giac-gwt/: build.gradle
giac-gwt/src/main/java/fr/grenoble/ujf/giac/: CASResources.java
scripts/: build-all.sh  build-xcframework.sh  configure-cross.sh  embed-wasm.sh
src/GeoGebraCAS-demo/cpp/: GeoGebraCAS-demo.cc
src/GeoGebraCAS/cpp/: GeoGebraCAS.cc
src/GeoGebraCAS/headers/: GeoGebraCAS.h
src/giac.js/prebuilt/: libgmp.la  libgmp.lai  libmpfr.la  libmpfr.lai
src/giac/bison/: input_parser.yy
src/giac/cpp/: alg_ext.cc  cocoa.cc  csturm.cc  derive.cc  desolve.cc  ezgcd.cc  first.cc  gauss.cc  gausspol.cc  gen.cc  global.cc  help.cc  identificateur.cc  ifactor.cc  index.cc  input_lexer.cc  input_parser.cc  intg.cc  intgab.cc  isom.cc  k_csdk.c  kadd.cc  kdisplay.cc  lin.cc  maple.cc  mathml.cc  misc.cc  modfactor.cc  modpoly.cc  moyal.cc  opengl.cc  pari.cc  pari.cc.old  permu.cc  plot.cc  plot3d.cc  prog.cc  quater.cc  risch.cc  rpn.cc  (+12 more)
src/giac/flex/: input_lexer.ll
src/giac/headers/: alg_ext.h  bf2gmp.h  cocoa.h  config.h  csturm.h  cutils.h  dispatch.h  first.h  gausspol.h  gen.h  global.h  gmp.h  gmp_replacements.h  help.h  identificateur.h  ifactor.h  index.h  input_lexer.h  input_parser.h  intg.h  k_csdk.h  k_defs.h  kdisplay.h  libbf.c  libbf.h  lin.h  maple.h  mathml.h  misc.h  modfactor.h  modint.h  modpoly.h  monomial.h  mpfi.h  mpfr.h  opengl.h  pari.h  permu.h  plot.h  plot3d.h  (+14 more)
src/giac/headers/android/arm-v7/: gmp.h
src/giac/headers/android/arm-v8/: gmp.h
src/giac/headers/android/x86/: gmp.h
src/giac/headers/android/x86-64/: gmp.h
src/giac/headers/ios/arm64/: gmp.h
src/giac/headers/iphonesimulator/arm64/: gmp.h
src/giac/headers/iphonesimulator/x86_64/: gmp.h
src/giac/headers/maccatalyst/arm64/: gmp.h
src/giac/headers/maccatalyst/x86_64/: gmp.h
src/jni/: giac.def
src/jni/cpp/: giac_wrap.cxx
src/jni/prebuilt/: README.md  android_prebuilts.sh  ios_prebuilts.sh
src/nodegiac/: README.md
src/nodegiac/cpp/: nodegiac.cc
src/simpleInterface/cpp/: ContextBridge.cpp  GenBridge.cpp
src/simpleInterface/framework/: framework.plist  xcframework.plist
src/simpleInterface/headers/: ContextBridge.hpp  GenBridge.hpp
src/simpleInterface/pod/: Giac.podspec
src/test/: regression
src/test/eliminate/: inversion-invariantpoint.out
src/test/geogebra/: CAStestJSON-ambiguous.in  CAStestJSON-ambiguous.out  CAStestJSON.in  CAStestJSON.out  GeoGebraCasIntegrationTest-ambiguous.in  GeoGebraCasIntegrationTest-ambiguous.out  GeoGebraCasIntegrationTest.in  GeoGebraCasIntegrationTest.out  NoExceptionTest.out  electron-rawTest-ambiguous.in  electron-rawTest-ambiguous.out  electron-rawTest.in  electron-rawTest.out
